# internal/handlers/auth.handler.go
@@ -9,6 +9,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/kodacampmain/koda3_gin/internal/models"
 	"github.com/kodacampmain/koda3_gin/internal/repositories"
+	"github.com/kodacampmain/koda3_gin/internal/utils"
 	"github.com/kodacampmain/koda3_gin/pkg"
 )
 
@@ -20,29 +21,28 @@ func NewAuthHandler(ar *repositories.AuthRepository) *AuthHandler {
 	return &AuthHandler{ar: ar}
 }
 
+// Login
+// @tags	auth
+// @router	/auth [POST]
+// @accept json
+// @param body body models.StudentAuth true "email and password input"
+// @produce json
+// @success 200 {object} models.AuthResponse
+// @failure 400 {object} models.BadRequestError
+// @failure 500 {object} models.InternalServerError
 func (a *AuthHandler) Login(ctx *gin.Context) {
 	// menerima body
 	var body models.StudentAuth
 	if err := ctx.ShouldBind(&body); err != nil {
 		if strings.Contains(err.Error(), "required") {
-			ctx.JSON(http.StatusBadRequest, gin.H{
-				"success": false,
-				"error":   "Nama dan Password harus diisi",
-			})
+			utils.HandleError(ctx, http.StatusBadRequest, "Nama dan Password harus diisi", "Bad Request")
 			return
 		}
 		if strings.Contains(err.Error(), "min") {
-			ctx.JSON(http.StatusBadRequest, gin.H{
-				"success": false,
-				"error":   "Password minimum 4 karakter",
-			})
+			utils.HandleError(ctx, http.StatusBadRequest, "Password minimum 4 karakter", "Bad Request")
 			return
 		}
-		log.Println("Internal Server Error.\nCause: ", err.Error())
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"success": false,
-			"error":   "internal server error",
-		})
+		utils.HandleError(ctx, http.StatusInternalServerError, err.Error(), "Internal Server Error")
 		return
 	}
 
@@ -50,16 +50,10 @@ func (a *AuthHandler) Login(ctx *gin.Context) {
 	student, err := a.ar.GetStudentWithPasswordAndRole(ctx.Request.Context(), body.Name)
 	if err != nil {
 		if strings.Contains(err.Error(), "user not found") {
-			ctx.JSON(http.StatusBadRequest, gin.H{
-				"success": false,
-				"error":   "Nama atau Password salah",
-			})
+			utils.HandleError(ctx, http.StatusBadRequest, "Nama atau Password salah", "Bad Request")
 			return
 		}
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"success": false,
-			"error":   "internal server error",
-		})
+		utils.HandleError(ctx, http.StatusInternalServerError, err.Error(), "Internal Server Error")
 		return
 	}
 
@@ -67,38 +61,30 @@ func (a *AuthHandler) Login(ctx *gin.Context) {
 	hc := pkg.NewHashConfig()
 	isMatched, err := hc.CompareHashAndPassword(body.Password, student.Password)
 	if err != nil {
-		log.Println("Internal Server Error.\nCause: ", err.Error())
 		re := regexp.MustCompile("hash|crypto|argon2id|format")
 		if re.Match([]byte(err.Error())) {
 			log.Println("Error during Hashing")
 		}
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"success": false,
-			"error":   "internal server error",
-		})
+		utils.HandleError(ctx, http.StatusInternalServerError, err.Error(), "Internal Server Error")
 		return
 	}
 
 	if !isMatched {
-		ctx.JSON(http.StatusBadRequest, gin.H{
-			"success": false,
-			"error":   "Nama atau Password salah",
-		})
+		utils.HandleError(ctx, http.StatusBadRequest, "Nama atau Password salah", "Bad Request")
 		return
 	}
 	// jika match, maka buatkan jwt dan kirim via response
 	claims := pkg.NewJWTClaims(student.Id, student.Role)
 	jwtToken, err := claims.GenToken()
 	if err != nil {
-		log.Println("Internal Server Error.\nCause: ", err.Error())
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"success": false,
-			"error":   "internal server error",
-		})
+		utils.HandleError(ctx, http.StatusInternalServerError, err.Error(), "Internal Server Error")
 		return
 	}
-	ctx.JSON(http.StatusOK, gin.H{
-		"success": true,
-		"token":   jwtToken,
+	utils.HandleResponse(ctx, http.StatusOK, models.AuthResponse{
+		SuccessResponse: models.SuccessResponse{
+			Success: true,
+			Status:  200,
+		},
+		Data: models.AuthData{Token: jwtToken},
 	})
 }
