# internal/models/student.model.go
@@ -2,20 +2,34 @@ package models
 
 import "mime/multipart"
 
-type Student struct {
-	Id       int    `db:"id" json:"id"`
-	Name     string `db:"name" json:"nama_siswa"`
-	Role     string `db:"role" json:"peran,omitempty"`
-	Password string `db:"password" json:"password,omitempty"`
-	Images   string `db:"images" json:"image"`
-}
-
-type StudentBody struct {
-	Student
-	Images *multipart.FileHeader `form:"image"`
+type StudentData struct {
+	Id       int     `db:"id" json:"-"`
+	Name     string  `db:"name" form:"name" json:"name"`
+	Role     string  `db:"role" json:"-"`
+	Password string  `db:"password" form:"pwd" json:"pwd,omitempty"`
+	Image    *string `db:"images" json:"image"`
 }
 
 type StudentAuth struct {
 	Name     string `json:"nama_siswa" binding:"required"`
 	Password string `json:"password" binding:"required,min=4"`
+}
+
+type StudentBody struct {
+	StudentData
+	Image *multipart.FileHeader `form:"image"`
+}
+
+type AuthData struct {
+	Token string `json:"token" example:"jwt token"`
+}
+
+type AuthResponse struct {
+	SuccessResponse
+	Data AuthData `json:"data"`
+}
+
+type StudentResponse struct {
+	SuccessResponse
+	Data StudentData `json:"data"`
 }
